--- a/rails_studio/flix_tdd/Gemfile
+++ b/rails_studio/flix_tdd/Gemfile
@@ -39,9 +39,9 @@ gem 'sdoc', '~> 0.4.0',          group: :doc
 gem 'tzinfo-data', platforms: [:mingw, :mswin]
 
 group :test, :development do
-  gem "rspec-rails", "2.13.1"
+  gem "rspec-rails"
 end
 
 group :test do
-  gem "capybara", "2.1.0"
+  gem "capybara"
 end
